@@ -169,7 +169,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   Added a collective.messagesviewlet warning message that is displayed to MeetingManagers if last defined holiday
   is in less than 60 days
 - Added parameter MeetingConfig.keepAccessToItemWhenAdviceIsGiven, if set to True, the advisers of an advice that was
-  given on an item will keep read access to the item, no matter the state in which the item is set thereafter
+  given on an item will keep read access to the item, no matter the state in which the item is set thereafter.
+  MeetingGroup.keepAccessToItemWhenAdviceIsGiven is also available so the value of the meetingConfig may be overrided
+  for a given MeetingGroup
 
 3.3 (2015-02-27)
 ----------------
